fix a z-indexing but with annotations

--- a/documents/css/app.css
+++ b/documents/css/app.css
@@ -1491,6 +1491,7 @@ navbar .navbar + doc-viewer.modal-backdrop {
     background-position: top center;
     margin: 0 auto 0 auto;
     position: relative;
+    z-index: 0; /* for annotations */
 }
 
 .docPanelContainer {
@@ -1669,6 +1670,10 @@ annotation {
     position: absolute;
     top: 0;
     left: 0;
+}
+
+annotation > div {
+    z-index: 1; /* since annotations have size but no content, make sure they can't block the div */
 }
 
 .draggable {
